# cpp_onion

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  USAGE.md
.claude/: settings.json
.claude/agents/: onion-crypto.md  onion-cuda.md  onion-reviewer.md
.github/workflows/: ci.yml
docs/: design.md
docs/devlog/: gpu-optimization-research.md
docs/devlog/plans/: 2026-06-12-phase0-reference-generator.md  2026-06-13-phase2-avx2-4wide.md
docs/superpowers/plans/: 2026-06-12-phase1-incremental-engine.md  2026-06-13-phase3-cuda.md
src/: CMakeLists.txt
src/cli/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt  base32.cpp  base32.hpp  matcher.cpp  matcher.hpp  onion_address.cpp  onion_address.hpp
src/crypto/: CMakeLists.txt  fe25519.cpp  fe25519.hpp  fe25519x4.cpp  fe25519x4.hpp  ge25519.cpp  ge25519.hpp  ge25519x4.cpp  ge25519x4.hpp  incremental.cpp  incremental.hpp  incremental_x4.cpp  incremental_x4.hpp  keys.cpp  keys.hpp  sha3.cpp  sha3.hpp
src/engine/: CMakeLists.txt  composite_engine.hpp  engine.hpp
src/engine/cpu/: CMakeLists.txt  incremental_engine.cpp  incremental_engine.hpp  incremental_engine_x4.cpp  incremental_engine_x4.hpp  naive_engine.cpp  naive_engine.hpp
src/engine/cuda/: CMakeLists.txt  cuda_engine.cu  cuda_engine.hpp  device_field.cuh  device_field32.cuh  device_field_select.cuh  search_kernel.cu  search_kernel.cuh  xval.hpp  xval_kernel.cu
src/io/: CMakeLists.txt  tor_key_writer.cpp  tor_key_writer.hpp  verifier.cpp  verifier.hpp
tests/: CMakeLists.txt  test_base32.cpp  test_composite_engine.cpp  test_cuda_engine.cpp  test_cuda_xval.cpp  test_engine_primitives.cpp  test_fe25519.cpp  test_fe25519x4.cpp  test_ge25519.cpp  test_ge25519x4.cpp  test_incremental.cpp  test_incremental_engine.cpp  test_incremental_engine_x4.cpp  test_incremental_x4.cpp  test_keys.cpp  test_matcher.cpp  test_naive_engine.cpp  test_onion_address.cpp  test_sanity.cpp  test_sha3.cpp  test_tor_key_writer.cpp  test_verifier.cpp
tests/e2e/: run_e2e.sh
tools/: verify_onion.py
